# AHEAD

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Mappe1.xlsx  README.md  bootstrap.sh  build  build_bootstrap.sh  clean  coding_benchmark.sh  common.conf  eclipse_cdt_formatter.xml  generate.sh  generate_ssb.sh  generate_ssbdata.sh  headers.tgz  modular_inverse.sh  nbproject.tgz  prune_database.sh  reproduce.sh  reproduce_SIGMOD2018.sh  scalinggovernor.sh  start.txt  test.cpp  turboboost.sh  useful_bash_scripts.txt
database/: dbgen
eval/: bmtest.sh  evaltest.sh  minbfw.sh  run.conf  run.sh
include/: AHEAD.hpp  AHEAD_Config.hpp  ColumnStore.h
include/column_operators/: ANbase.hpp  BAT_operator.h  BAT_selection.h  Operators.h  Operators.hpp  OperatorsAN.hpp  OperatorsAN.tcc  SSE.hpp  SSEAN.hpp  SSECMP.hpp  col_import.h  functors.hpp  operators.h  operatorsAN.tcc  predicate.h
include/column_storage/: BAT_base.h  BaseBAT.hpp  Bat.h  BatIterator.h  BucketManager.h  ColumnBat.h  ColumnBatIterator.h  ColumnDescriptor.hpp  ColumnManager.h  ColumnMetaData.hpp  PartedBat.h  PartedBatIterator.h  Storage.hpp  TempBat.h  TempBatIterator.h  TempFIFOBat.h  TempListBat.h  TempListBatIterator.h  TempQueue.h  TempStorage.hpp  TestBat.h  TestBatIterator.h  TransactionManager.h  adapter.h  circular_buffer.h  column.h  column_iterator.h  column_table.h  column_table_manager.h  generic_column.h  point.h  queue_adapter.h  shared_mem_adapter.h  (+2 more)
lib/: AHEAD.cpp  AHEAD_Config.cpp  CMakeLists.txt  build  clean
lib/column_operators/: CMakeLists.txt  Operators.cpp  OperatorsAN.cpp  SSE.cpp  SSE.hpp  SSE.inc  SSECMP.hpp  build  build.sh  clean  createshufflemaskarrays.cpp  functors.cpp  functors.hpp  miscellaneous.hpp  testshufflemask.cpp  testshufflemasktable.cpp
lib/column_operators/AN/: ANhelper.tcc  SSEAN.hpp  aggregateAN.cpp  aggregateAN.tcc  aggregateAN_SSE.tcc  aggregateAN_scalar.tcc  aggregateAN_seq.tcc  arithmeticAN.cpp  arithmeticAN_SSE.tcc  arithmeticAN_scalar.tcc  encdecAN.cpp  encdecAN.tcc  encdecAN_SSE.tcc  encdecAN_scalar.tcc  groupbyAN.cpp  groupbyAN.tcc  hashjoinAN.cpp  hashjoinAN.hpp  hashjoinAN.tcc  hashjoinAN_bigint.cpp  hashjoinAN_id.cpp  hashjoinAN_int.cpp  hashjoinAN_oid.cpp  hashjoinAN_resbigint.cpp  hashjoinAN_resint.cpp  hashjoinAN_resoid.cpp  hashjoinAN_resshort.cpp  hashjoinAN_restiny.cpp  hashjoinAN_shortint.cpp  hashjoinAN_size.cpp  hashjoinAN_str.cpp  hashjoinAN_tinyint.cpp  hashjoinAN_void.cpp  matchjoinAN.cpp  matchjoinAN.tcc  selectAN.cpp  selectAN.hpp  selectAN.tcc  selectAN_SSE.tcc  selectAN_resint.cpp  (+5 more)
lib/column_operators/Normal/: aggregate.cpp  aggregate.tcc  aggregate_SSE.tcc  aggregate_scalar.tcc  aggregate_seq.tcc  arithmetic.cpp  arithmetic_SSE.tcc  arithmetic_scalar.tcc  arithmetic_sse.tcc  groupby.cpp  groupby.tcc  hashjoin.cpp  hashjoin.hpp  hashjoin.tcc  hashjoin_bigint.cpp  hashjoin_id.cpp  hashjoin_int.cpp  hashjoin_oid.cpp  hashjoin_resbigint.cpp  hashjoin_resint.cpp  hashjoin_resshort.cpp  hashjoin_restiny.cpp  hashjoin_shortint.cpp  hashjoin_size.cpp  hashjoin_str.cpp  hashjoin_tinyint.cpp  hashjoin_void.cpp  matchjoin.cpp  matchjoin.hpp  matchjoin.tcc  matchjoin_bigint.cpp  matchjoin_id.cpp  matchjoin_int.cpp  matchjoin_oid.cpp  matchjoin_resbigint.cpp  matchjoin_resint.cpp  matchjoin_resshort.cpp  matchjoin_restiny.cpp  matchjoin_shortint.cpp  matchjoin_size.cpp  (+9 more)
lib/column_operators/SIMD/: AVX2.cpp  AVX2.hpp  AVX2_base.tcc  AVX2_uint08.tcc  AVX2_uint16.tcc  AVX2_uint32.tcc  AVX2_uint64.tcc  AVX512.cpp  AVX512.hpp  AVX512_base.tcc  AVX512_uint08.tcc  AVX512_uint16.tcc  AVX512_uint32.tcc  AVX512_uint64.tcc  SIMD.hpp  SIMDBase.hpp  SSE.cpp  SSE.hpp  SSECMP.hpp  SSECMP_uint16.tcc  SSECMP_uint32.tcc  SSE_base.tcc  SSE_uint08.tcc  SSE_uint16.tcc  SSE_uint32.tcc  SSE_uint64.tcc
lib/column_operators/SSE/: SSE.hpp  SSECMP.hpp  SSECMP_uint16.tcc  SSECMP_uint64.tcc  SSECMP_uint8.tcc
lib/column_storage/: BucketManager.cpp  ColumnBat.hpp  ColumnManager.cpp  Storage.cpp  Transaction.cpp  TransactionManager.cpp  build  clean
lib/meta_repository/: MetaRepositoryManager.cpp  MetaRepositoryManager.h  MetaRepositoryManager.tcc  build  clean
lib/util/: AlignedAllocator.cpp  argumentparser.cpp  build  clean  cpuid.cpp  resilience.cpp  rss.cpp  stopwatch.cpp  v2types.cpp
nbproject/: configurations.xml  project.properties  project.xml
paper/: 00-abstract.tex  00-appendix-SSB-scalar.tex  00-outline.tex  01-appendix-hardware.tex  01-introduction.tex  02-appendix-sdc-probabilities.tex  02_ProblemEvidence.tex  03-errorcoding.tex  04-datahardening.tex  05_resilientqueryprocessing.tex  06-end2end-eval.tex  07-MicroBenchmarks.tex  08-discussion.tex  09-conclusion.tex  sigmod2018.bbl  sigmod2018.tcp  sigmod2018.tex  sigproc.bib
test/: AVX2.cpp  SSE.cpp  build.sh  createshufflemaskarrays.cpp  createshufflemaskarrays_avx2.cpp  functors.cpp  testshufflemask.cpp  testshufflemask_distributions.cpp  testshufflemask_distributions.gnuplot  testshufflemask_distributions_avx2.gnuplot  testshufflemasktable.cpp
tools/: CMakeLists.txt  build  clean
tools/sample/: bm.sh  build  clean  lineorder_size.cpp  main.cpp  query1.cpp  ssb-q01.cpp  ssb-q11.cpp  ssbm-q01.cpp  ssbm-q01_eager.cpp  ssbm-q01_encoded.cpp  ssbm-q01_lazy.cpp  ssbm.hpp  test_group.cpp  test_hashjoin.cpp  util.sh
tools/ssbm/: bm.sh  bmtest.sh  build  clean  evaltest.sh  macros.hpp  run.sh  ssb.cpp  ssb.hpp  ssbm-convert.cpp  ssbm-dbsize.cpp  ssbm-q01.cpp  ssbm-q01_eager.cpp  ssbm-q01_encoded.cpp  ssbm-q01_lazy.cpp  ssbm-q11.cpp  ssbm-q11_continuous.cpp  ssbm-q11_continuous_reenc.cpp  ssbm-q11_dmr_mt.cpp  ssbm-q11_dmr_seq.cpp  ssbm-q11_eager.cpp  ssbm-q11_early.cpp  ssbm-q11_encoded.cpp  ssbm-q11_late.cpp  ssbm-q11_lazy.cpp  ssbm-q11_normal.cpp  ssbm-q12.cpp  ssbm-q12_continuous.cpp  ssbm-q12_continuous_reenc.cpp  ssbm-q12_dmr_mt.cpp  ssbm-q12_dmr_seq.cpp  ssbm-q12_eager.cpp  ssbm-q12_early.cpp  ssbm-q12_encoded.cpp  ssbm-q12_late.cpp  ssbm-q12_lazy.cpp  ssbm-q12_normal.cpp  ssbm-q13.cpp  ssbm-q13_continuous.cpp  ssbm-q13_continuous_reenc.cpp  (+80 more)
verify/: createresults.sh  diffresults.sh
(+79 files in other folders)
